--- a/gabung/v1.html
+++ b/gabung/v1.html
@@ -88,8 +88,8 @@
 </head>
 <body>
 
-<h1>Produk Live MadGazan 8 November 2025</h1>
-<h2>Manajemen Shopee Live v7</h2>
+<h1>Produk Live MadGazan 5 Oktober</h1>
+<h2>Manajemen Shopee Live v1</h2>
 
 <textarea id="inputLinks" placeholder="Masukkan ribuan link produk Shopee, satu per baris..."></textarea>
 
@@ -97,7 +97,7 @@
   <button id="clearInputLinksBtn">Clear Input Links</button>
   <button id="copyInputLinksBtn">Copy Input Links</button>
   <button id="hapusDuplikatBtn">Hapus Duplikat</button>
-  
+  <button id="sortirPerTokoBtn">Sortir Berdasarkan Toko</button>
 </div>
 
 <h3>Daftar File TXT Produk</h3>
@@ -111,7 +111,7 @@
 </select>
 <div id="updateNotice" style="margin:10px 0; font-weight:bold;"></div>
 <div class="input-buttons">
-  <button id="ambilFileListLinksBtn">Download Terupdate</button>
+  <button id="ambilFileListLinksBtn">Download Terbaru Masal</button>
 </div>
 
 <div class="sponsor">
@@ -407,7 +407,7 @@ async function checkForUpdates() {
     const localText = (localData.inputList || '').trim();
 
     if (serverText !== localText) {
-      noticeEl.textContent = `⚠️ Data lokal "${fileName}" berbeda dengan versi server, klik download untuk update terbaru`;
+      noticeEl.textContent = `⚠️ Data lokal "${fileName}" berbeda dengan versi server.`;
       noticeEl.style.color = '#b30000';
     } else {
       noticeEl.textContent = `✅ Data lokal "${fileName}" sudah versi terbaru.`;
